apps/sabnzbd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabnzbd
  namespace: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sabnzbd
  template:
    metadata:
      labels:
        app: sabnzbd
    spec:
      # init container which creates directories for subpaths
      containers:
        - name: sabnzbd
          image: lscr.io/linuxserver/sabnzbd:5.0.3-ls256
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: config
              mountPath: /data/usenet
              subPath: usenet/
            - name: config
              mountPath: /config
              subPath: sabnzbd/config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-config
