apps/sabnzbd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
  namespace: jellyfin
  annotations:
    metallb.io/loadBalancerIPs: 192.168.176.224
spec:
  type: LoadBalancer
  selector:
    app: sabnzbd
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
