apps/sabnzbd/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sabnzbd-http
  namespace: jellyfin
spec:
  parentRefs:
    - name: traefik
      namespace: traefik
      sectionName: web
      kind: Gateway

  hostnames:
    - sabnzbd.homelab

  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /

      backendRefs:
        - name: sabnzbd
          namespace: jellyfin
          port: 8080
