apps/sabnzbd/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sabnzbd-ingressroute
  namespace: jellyfin
spec:
  entryPoints:
    - web
  routes:
    - match: Host("sabnzbd.homelab")
      kind: Rule
      services:
        - name: sabnzbd
          port: 8080
